--- a/config.ini
+++ b/config.ini
@@ -2,31 +2,43 @@
 primaryId = N82E16820215361
 secondaryId = 20-215-361
 priceThreshold = 1000.00
+isCombo = false
 
 [ALWAYSWORKS]
 primaryId = N82E16820215361
 secondaryId = 20-215-361
 priceThreshold = 1000.00
+isCombo = false
 
 [ASUS6800XT]
 primaryId = N82E16814126472
 secondaryId = 14-126-472
 priceThreshold = 700.00
+isCombo = false
 
 [MSI6800XT]
 primaryId = N82E16814137607
 secondaryId = 14-137-607
 priceThreshold = 700.00
+isCombo = false
 
 [ASROCK6800XT]
 primaryId = N82E16814930045
 secondaryId = 14-930-045
 priceThreshold = 700.00
+isCombo = false
 
 [5600X]
 primaryId = N82E16819113666
 secondaryId = 19-113-666
 priceThreshold = 330.00
+isCombo = false
+
+[COMBOTEST]
+primaryId = 4206670
+secondaryId = N82E16819118147
+priceThreshold = 600.00
+isCombo = true
 
 [CREDENTIALS]
 phoneNumber = ***
