--- a/configs/billing_config.json
+++ b/configs/billing_config.json
@@ -1,11 +1,11 @@
 {
-  "name": "Tilak Patel",
-  "phone": "(603) 718-0496",
-  "address": "6019 Chesworth Rd",
-  "zip_code": "21228-2716",
-  "state": "MD",
-  "city": "Catonsville",
-  "cvv": "053",
+  "name": "Donald Trump",
+  "phone": "(XXX) XXX-XXXX",
+  "address": "25 Cheese Rd",
+  "zip_code": "XXXXX-XXXX",
+  "state": "MA",
+  "city": "Boston",
+  "cvv": "029",
   "country": "USA",
   "country_long": "United States"
 }
