--- a/configs/settings_config.json
+++ b/configs/settings_config.json
@@ -1,8 +1,9 @@
 {
   "atc_limit": 500,
-  "gen_session_id_limit": 10,
+  "gen_session_id_limit": 1,
   "get_transaction_number_limit": 10,
   "submit_card_info_limit": 10,
   "validate_address_limit": 10,
+  "submit_order_limit": 10,
   "timeout": 3
 }
