--- a/configs/settings_config.json
+++ b/configs/settings_config.json
@@ -5,5 +5,6 @@
   "submit_card_info_limit": 10,
   "validate_address_limit": 10,
   "submit_order_limit": 10,
-  "timeout": 3
+  "timeout": 3,
+  "cookie_file": "cookies.json"
 }
