--- a/configs/billing_config.json
+++ b/configs/billing_config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Donald Duck"
+  "name": "Donald Duck",
   "phone": "(XXX) XXX-XXXX",
   "address": "XXX Road Rd",
   "zip_code": "XXXXX-XXXX",
