Better error logging

--- a/configs/jobs_config.json
+++ b/configs/jobs_config.json
@@ -4,5 +4,11 @@
     "settings_config_file": "settings_config.json",
     "product_config_file": "product_config.json",
     "billing_config_file": "billing_config.json"
+  },
+  {
+    "job_id": 2,
+    "settings_config_file": "settings_config.json",
+    "product_config_file": "product_config.json",
+    "billing_config_file": "billing_config.json"
   }
 ]
