--- a/configs/jobs_config.json
+++ b/configs/jobs_config.json
@@ -1,12 +1,12 @@
 [
   {
-    "job_id": 1,
+    "job_name": "default job 1",
     "settings_config_file": "settings_config.json",
     "product_config_file": "product_config.json",
     "billing_config_file": "billing_config.json"
   },
   {
-    "job_id": 2,
+    "job_name": "default job 2",
     "settings_config_file": "settings_config.json",
     "product_config_file": "product_config.json",
     "billing_config_file": "billing_config.json"
